--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,26 +7,32 @@ project(MyTetris LANGUAGES CXX)
 
 include(FetchContent)
 
-set(SFML_STATIC_LIBRARIES TRUE)
+#set(SFML_STATIC_LIBRARIES TRUE)
 
-set(CMAKE_CXX_STANDARD_REQUIRED true)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_VERBOSE_MAKEFILE ON) 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
 set(BUILD_SHARED_LIBS OFF)
 
+FetchContent_Declare(spdlog
+    GIT_REPOSITORY https://github.com/gabime/spdlog.git
+    GIT_TAG        v1.15.3
+)
 
 FetchContent_Declare(SFML
     GIT_REPOSITORY https://github.com/SFML/SFML.git
     GIT_TAG 3.0.0
     )
     
-FetchContent_MakeAvailable(SFML)
+FetchContent_MakeAvailable(spdlog SFML)
 
 
-#add_compile_options(-g )
+#add_compile_options(-g)
+#add_compile_options(-std=c++20)
 
 add_executable(MyTetris src/main.cpp src/game.cpp src/player_profile.cpp src/field.cpp src/tile.cpp src/block.cpp src/level.cpp src/sound_manager.cpp)
 
 
+target_include_directories(MyTetris PUBLIC "${CMAKE_CURRENT_LIST_DIR}/build/_deps/spdlog-src/include")
 
-target_link_libraries(MyTetris PRIVATE SFML::Graphics SFML::Window SFML::System SFML::Audio)
+target_link_libraries(MyTetris PRIVATE spdlog::spdlog SFML::Graphics SFML::Window SFML::System SFML::Audio)
