--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,12 @@
-cmake_minimum_required(VERSION 3.25)
+cmake_minimum_required(VERSION 3.22)
 project(MyTetris LANGUAGES CXX)
 
-#set(SFML_STATIC_LIBRARIES ON)
-# set(SFML_DIR "$ENV{HOME}/libs/SFML-3.0.0/lib/cmake/SFML")
-# find_package(SFML 3 COMPONENTS Graphics Window System Audio REQUIRED)
-
 include(FetchContent)
-
-#set(SFML_STATIC_LIBRARIES TRUE)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_VERBOSE_MAKEFILE ON) 
 set(CMAKE_CXX_STANDARD 23)
-set(BUILD_SHARED_LIBS OFF)
+set(BUILD_SHARED_LIBS ON)
 
 FetchContent_Declare(spdlog
     GIT_REPOSITORY https://github.com/gabime/spdlog.git
@@ -41,7 +35,5 @@ FetchContent_MakeAvailable(json)
 #add_compile_options(-std=c++20)
 
 add_executable(MyTetris src/main.cpp src/game.cpp src/player_profile.cpp src/field.cpp src/tile.cpp src/block.cpp src/level.cpp src/sound_manager.cpp src/menu.cpp src/state.cpp src/state_gameover.cpp src/state_menu.cpp src/state_paused.cpp src/state_playing.cpp src/resource_manager.cpp)
-
-target_include_directories(MyTetris PUBLIC "${CMAKE_CURRENT_LIST_DIR}/build/_deps/spdlog-src/include")
 
 target_link_libraries(MyTetris PRIVATE nlohmann_json::nlohmann_json spdlog::spdlog SFML::Graphics SFML::Window SFML::System SFML::Audio)
